--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/eyedia/synoplayer#readme",
   "dependencies": {
     "axios": "^1.7.9",
+    "axios-retry": "^4.5.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "sqlite3": "^5.1.7"
