--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios-retry": "^4.5.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "winston": "^3.17.0"
   }
 }
