--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios-retry": "^4.5.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "node-cron": "^3.0.3",
     "sqlite3": "^5.1.7",
     "useragent": "^2.3.0",
     "winston": "^3.17.0"
