--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.9",
     "axios-retry": "^4.5.0",
     "dotenv": "^16.4.7",
+    "exifr": "^7.1.3",
     "express": "^4.21.2",
     "moment-timezone": "^0.5.47",
     "node-cron": "^3.0.3",
