--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "A photo slide show app for Synology NAS",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js",
+    "test": "jest"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
   },
   "repository": {
     "type": "git",
@@ -27,10 +32,17 @@
     "dotenv": "^16.4.7",
     "exifr": "^7.1.3",
     "express": "^4.21.2",
+    "jest": "^29.7.0",
     "moment-timezone": "^0.5.47",
     "node-cron": "^3.0.3",
     "sqlite3": "^5.1.7",
+    "supertest": "^7.0.0",
     "useragent": "^2.3.0",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
+    "babel-jest": "^29.7.0"
   }
 }
