--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
-    "test": "jest --config=jest.config.js --runInBand --detectOpenHandles"
+    "test": "jest --config=jest.config.js --detectOpenHandles"
   },
   "repository": {
     "type": "git",
