--- a/package.json
+++ b/package.json
@@ -25,18 +25,19 @@
     "axios-retry": "^4.5.0",
     "crypto": "^1.0.1",
     "exifr": "^7.1.3",
-    "express": "^4.21.2",    
+    "express": "^4.21.2",
+    "helmet": "^8.0.0",
     "moment-timezone": "^0.5.47",
     "node-cron": "^3.0.3",
-    "sqlite3": "^5.1.7",    
+    "sqlite3": "^5.1.7",
     "useragent": "^2.3.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "supertest": "^7.0.0",
     "@babel/core": "^7.26.9",
     "@babel/preset-env": "^7.26.9",
-    "babel-jest": "^29.7.0"
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
