--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,9 @@
             runs-on: ubuntu-latest
             steps:
               - uses: actions/checkout@v3
-              - name: Use Node.js 22.x
+              - name: Use Node.js 22.13
                 uses: actions/setup-node@v3
                 with:
-                  node-version: 22.x
+                  node-version: 22.13
               - run: npm install
               - run: npm test
