--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/eyedia/eyedeeaphotos#readme",
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.4.0",
+    "appdata-path": "^1.0.0",
     "axios": "^1.7.9",
     "axios-retry": "^4.5.0",
     "crypto": "^1.0.1",
