--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "appdata-path": "^1.0.0",
     "axios": "^1.7.9",
     "axios-retry": "^4.5.0",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "exifr": "^7.1.3",
     "express": "^4.21.2",
