--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "exifr": "^7.1.3",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
+    "image-thumbnail": "^1.0.17",
     "moment-timezone": "^0.5.47",
     "node-cron": "^3.0.3",
     "sqlite3": "^5.1.7",
