--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
+    "swagger": "node ./swagger.js",
     "test": "jest --config=jest.config.js --detectOpenHandles"
   },
   "repository": {
@@ -34,6 +35,7 @@
     "moment-timezone": "^0.5.47",
     "node-cron": "^3.0.3",
     "sqlite3": "^5.1.7",
+    "swagger-ui-express": "^5.0.1",
     "tough-cookie": "^5.1.2",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
@@ -43,6 +45,7 @@
     "@babel/preset-env": "^7.26.9",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "swagger-autogen": "^2.23.7"
   }
 }
