--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
+    "start-safe": "nodemon app.js --safe-mode",
     "swagger": "node ./swagger.js",
     "test": "jest --config=jest.config.js --detectOpenHandles"
   },
