--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eyedeeaphotos",
-  "version": "1.0.0-beta.10",
+  "version": "1.0.1",
   "description": "Eyedeea Photos is an app designed to bring forgotten memories back to life. It integrates with Synology Photos & any USB, HDD, SDD to display random photos from the collection",
   "main": "app.js",
   "scripts": {
