--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "swagger": "node ./swagger.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
-    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage"
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
+    "migrate:create": "node meta/create_migration.mjs"
   },
   "repository": {
     "type": "git",
