--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
-    "migrate:create": "node meta/create_migration.mjs"
+    "migrate:create": "node meta/create_migration.mjs",
+    "release": "node release/release.mjs",
+    "check-updates": "node release/auto-update.mjs"
   },
   "repository": {
     "type": "git",
