major directory structure

--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "eyedeeaphotos",
   "version": "1.0.1",
   "description": "Eyedeea Photos is an app designed to bring forgotten memories back to life. It integrates with Synology Photos & any USB, HDD, SDD to display random photos from the collection",
-  "main": "app.js",
+  "main": "server/app.js",
   "scripts": {
-    "start": "nodemon app.js",
-    "start-safe": "nodemon app.js --safe-mode",
-    "swagger": "node ./swagger.js",
+    "start": "nodemon server/app.js",
+    "start-safe": "nodemon server/app.js --safe-mode",
+    "swagger": "node ./server/swagger.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
-    "migrate:create": "node meta/create_migration.mjs",
+    "migrate:create": "node server/meta/create_migration.mjs",
     "release": "node release/release.mjs",
     "check-updates": "node release/auto-update.mjs"
   },
