--- a/apps/android/local.properties
+++ b/apps/android/local.properties
@@ -7,3 +7,6 @@
 #Fri Nov 28 09:28:12 EST 2025
 #sdk.dir=C\:\\Users\\debjy\\AppData\\Local\\Android\\Sdk
 sdk.dir=D\:\\AndroidStudio
+keystorePassword=YOUR_STORE_PASSWORD
+keyAlias=YOUR_KEY_ALIAS
+keyPassword=YOUR_KEY_PASSWORD
