--- a/package.json
+++ b/package.json
@@ -1,57 +1,59 @@
 {
-  "name": "eyedeeaphotos",
-  "version": "2025.12.15.02",
-  "description": "Eyedeea Photos is an app designed to bring forgotten memories back to life. It integrates with Synology Photos & any USB, HDD, SDD to display random photos from the collection",
-  "main": "server/app.js",
-  "scripts": {
-    "start": "nodemon server/app.js",
-    "start-safe": "nodemon server/app.js --safe-mode",
-    "swagger": "node ./server/swagger.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
-    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
-    "migrate:create": "node server/meta/create_migration.mjs",
-    "release": "node release/release.mjs",
-    "check-updates": "node server/deployment/auto-update.mjs"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/eyedia/eyedeeaphotos.git"
-  },
-  "type": "module",
-  "keywords": [],
-  "author": "Eyedia Technologies",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/eyedia/eyedeeaphotos/issues"
-  },
-  "homepage": "https://eyedeeaphotos.eyediatech.com/",
-  "dependencies": {
-    "@googlemaps/google-maps-services-js": "^3.4.0",
-    "appdata-path": "^1.0.0",
-    "axios": "^1.7.9",
-    "axios-cookiejar-support": "^5.0.5",
-    "axios-retry": "^4.5.0",
-    "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "exifr": "^7.1.3",
-    "express": "^4.21.2",
-    "helmet": "^8.0.0",
-    "image-thumbnail": "^1.0.17",
-    "moment-timezone": "^0.5.47",
-    "node-cron": "^3.0.3",
-    "sqlite3": "^5.1.7",
-    "swagger-ui-express": "^5.0.1",
-    "tough-cookie": "^5.1.2",
-    "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.26.9",
-    "@babel/preset-env": "^7.26.9",
-    "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
-    "supertest": "^7.0.0",
-    "swagger-autogen": "^2.23.7"
-  }
+    "name":  "eyedeeaphotos",
+    "version":  "2025.12.15.03",
+    "description":  "Eyedeea Photos is an app designed to bring forgotten memories back to life. It integrates with Synology Photos \u0026 any USB, HDD, SDD to display random photos from the collection",
+    "main":  "server/app.js",
+    "scripts":  {
+                    "start":  "nodemon server/app.js",
+                    "start-safe":  "nodemon server/app.js --safe-mode",
+                    "swagger":  "node ./server/swagger.js",
+                    "test":  "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+                    "test:watch":  "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
+                    "test:coverage":  "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
+                    "migrate:create":  "node server/meta/create_migration.mjs",
+                    "release":  "node release/release.mjs",
+                    "check-updates":  "node server/deployment/auto-update.mjs"
+                },
+    "repository":  {
+                       "type":  "git",
+                       "url":  "git+https://github.com/eyedia/eyedeeaphotos.git"
+                   },
+    "type":  "module",
+    "keywords":  [
+
+                 ],
+    "author":  "Eyedia Technologies",
+    "license":  "ISC",
+    "bugs":  {
+                 "url":  "https://github.com/eyedia/eyedeeaphotos/issues"
+             },
+    "homepage":  "https://eyedeeaphotos.eyediatech.com/",
+    "dependencies":  {
+                         "@googlemaps/google-maps-services-js":  "^3.4.0",
+                         "appdata-path":  "^1.0.0",
+                         "axios":  "^1.7.9",
+                         "axios-cookiejar-support":  "^5.0.5",
+                         "axios-retry":  "^4.5.0",
+                         "cors":  "^2.8.5",
+                         "crypto":  "^1.0.1",
+                         "exifr":  "^7.1.3",
+                         "express":  "^4.21.2",
+                         "helmet":  "^8.0.0",
+                         "image-thumbnail":  "^1.0.17",
+                         "moment-timezone":  "^0.5.47",
+                         "node-cron":  "^3.0.3",
+                         "sqlite3":  "^5.1.7",
+                         "swagger-ui-express":  "^5.0.1",
+                         "tough-cookie":  "^5.1.2",
+                         "winston":  "^3.17.0",
+                         "winston-daily-rotate-file":  "^5.0.0"
+                     },
+    "devDependencies":  {
+                            "@babel/core":  "^7.26.9",
+                            "@babel/preset-env":  "^7.26.9",
+                            "babel-jest":  "^29.7.0",
+                            "jest":  "^29.7.0",
+                            "supertest":  "^7.0.0",
+                            "swagger-autogen":  "^2.23.7"
+                        }
 }
