--- a/.github/workflows/release-assets.yml
+++ b/.github/workflows/release-assets.yml
@@ -40,7 +40,7 @@ jobs:
           Copy-Item release/install.sh artifacts/install.sh
           Copy-Item release/ep_a.apk artifacts/ep_a.apk
           Copy-Item release/ep_f.apk artifacts/ep_f.apk
-          Copy-Item apps/desktop/bootstrap.ps1 artifacts/desktop_wallpaper.ps1
+          Copy-Item apps/desktop/desktop_wallpaper.ps1 artifacts/desktop_wallpaper.ps1
 
       - name: Upload assets to release
         uses: softprops/action-gh-release@v1
